he añadido contenido

--- a/index.html
+++ b/index.html
@@ -7,5 +7,6 @@
 </head>
 <body>
     <p>estoy haciendo una web con los peindos de mi peluqueria</p>
+    <p>hola esto esta modificado</p>
 </body>
 </html>
